--- a/src/style.scss
+++ b/src/style.scss
@@ -59,6 +59,8 @@ main {
       border-radius: 1em;
       padding: 1em;
       background: #fff;
+      max-height: calc(100vh - 220px);
+      overflow: auto;
 
       &:only-child {
         width: 70%;
@@ -74,6 +76,7 @@ main {
 
           > li {
             list-style: none;
+            cursor: pointer;
           }
         }
       }
@@ -137,4 +140,9 @@ button {
 code {
   display: block;
   height: 100%;
+}
+
+pre {
+  border: 1px solid gray;
+  border-radius: 1em;
 }
